Closed Bug 861656 Opened 12 years ago Closed 12 years ago

Removing X-Parameters does not work

Categories

(Calendar :: Internal Components, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: Fallen, Assigned: Fallen)

References

Details

Attachments

(1 file)

Attached patch Fix - v1 β€” β€” Splinter Review
The way we remove parameters does not work for X-Parameters. Lets try a different method. Tests in bug 861620.
Attachment #737279 - Flags: review?(matthew.mecca)
Flags: in-testsuite+
Attachment #737279 - Flags: review?(matthew.mecca) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → 2.5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: