Fix bug 861656 - Removing X-Parameters does not work. r=mmecca

--HG--
extra : rebase_source : 0c68b508521f41d426605bc29abf4a01df7decce